2012-03-16  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test/ulps: Update.

2012-03-16  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/ffsll.c (ffsl): Define alias only under
	[__LP64__].

2012-03-16  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/ieee754/dbl-64/wordsize-64/s_lround.c: Moved to ...
	* sysdeps/ieee754/dbl-64/wordsize-64/s_llround.c: This.
	(__lround): Renamed to ...
	(__llround): This.  Replace long int with long long int.
	Define lround functions as aliases of llround functions.
	* sysdeps/ieee754/dbl-64/wordsize-64/s_lround.c: Empty file.

2012-03-16  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/makecontext.c (__makecontext):
	Use greg_t on sp.  Use unsigned int on idx_uc_link.  Cast
	adresses to uintptr_t.  Replace "long int" and "unsigned long
	int" with "greg_t" on va_arg.

2012-03-16  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/generic/ldconfig.h (FLAG_X8664_LIBX32): New macro.
	* elf/cache.c (print_entry): Handle FLAG_X8664_LIBX32.

	* sysdeps/unix/sysv/linux/i386/readelflib.c (process_elf_file):
	Move e_machine check before EI_CLASS check.  Handle x32
	libraries.  Check EM_IA_64 only if SKIP_EM_IA_64 isn't defined.
	* sysdeps/unix/sysv/linux/x86_64/readelflib.c: Just define
	SKIP_EM_IA_64 and include
	<sysdeps/unix/sysv/linux/i386/readelflib.c>.

	* sysdeps/unix/sysv/linux/x86_64/dl-cache.h:
	Don't include <sysdeps/unix/sysv/linux/sparc/dl-cache.h>.
	(add_system_dir): New macro.

	* sysdeps/unix/sysv/linux/x86_64/ldconfig.h
	(SYSDEP_KNOWN_INTERPRETER_NAMES): Add /libx32/ld-linux-x32.so.2.

2012-03-16  Joseph Myers  <joseph@codesourcery.com>

	[BZ #2551]
	[BZ #2552]
	[BZ #2553]
	[BZ #2554]
	[BZ #2562]
	[BZ #2563]
	[BZ #2565]
	[BZ #2566]
	[BZ #2576]
	* math/w_j0.c (j0): Don't produce TLOSS errors for POSIX libm.
	(y0): Likewise.
	* math/w_j0f.c (j0f): Likewise.
	(y0f): Likewise.
	* math/w_j0l.c (__j0l): Likewise.
	(__y0l): Likewise.
	* math/w_j1.c (j1): Likewise.
	(y1): Likewise.