@@ -11,12 +11,12 @@ Version 2.16
 
   174, 350, 411, 2541, 2547, 2548, 2551, 2552, 2553, 2554, 2562, 2563, 2565,
   2566, 2576, 3335, 3976, 3992, 4026, 4108, 4596, 4822, 5077, 5461, 5805,
-  5993, 6884, 6907, 6911, 9739, 9902, 10110, 10135, 10140, 10210, 10545,
-  10716, 11174, 11322, 11365, 11494, 12047, 13058, 13525, 13526, 13527,
-  13528, 13529, 13530, 13531, 13532, 13533, 13547, 13551, 13552, 13553,
-  13555, 13559, 13566, 13583, 13618, 13637, 13656, 13658, 13673, 13695,
-  13704, 13706, 13726, 13738, 13786, 13792, 13806, 13840, 13841, 13844,
-  13846, 13851, 13852, 13854
+  5993, 6471, 6884, 6907, 6911, 9739, 9902, 10110, 10135, 10140, 10210,
+  10545, 10716, 11174, 11322, 11365, 11494, 12047, 13058, 13525, 13526,
+  13527, 13528, 13529, 13530, 13531, 13532, 13533, 13547, 13551, 13552,
+  13553, 13555, 13559, 13566, 13583, 13618, 13637, 13656, 13658, 13673,
+  13695, 13704, 13706, 13726, 13738, 13786, 13792, 13806, 13840, 13841,
+  13844, 13846, 13851, 13852, 13854
 
 * ISO C11 support:
 
